Front da tela inicial modificado

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,136 +1,6 @@
-body{
-    background-color: #f8f8f8;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+h1{
+    cursor:default;
 }
-
-/*Css para o header*/
-
-header{
-    padding: 20px 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(77, 189, 233, 0.5);
+p{
+    cursor:default;
 }
-header h1 {
-    margin: 0;
-    font-size: 40px;
-}
-header p {
-    font-size: 13px;
-    font-weight: bold;
-}
-header .content-header{
-    margin-left: 100px;
-}
-
-/*Fim*/
-
-
-/*Css para o main*/
-main{
-    padding-top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 25%;
-}
-main .content-introduction{
-    margin-left: 150px;
-    padding-right: 200px;
-    
-}
-main .content-introduction h1{
-    font-size: 30px;
-    font-weight: bold;
-
-}
-main .content-introduction p{
-    font-size: 12px;
-    font-weight: 400;
-}
-main .content-register{
-    background-color:  rgba(77, 189, 233, 0.5);
-    width: 620px;
-    padding-left: 30px;
-    padding-top: 15px;
-    padding-right: 55px;
-    padding-bottom: 50px;
-    border-radius: 10px;
-    box-shadow: 15px 20px 10px rgba(0,0,0,0.1);
-    
-}
-main .content-register label{
-    margin-left: 10px;
-}
-main .content-register input{
-    padding: 10px;
-    border: black solid 1px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    margin-top: 5px;
-}
-main .content-register #name{
-    width: 30%;
-}
-main .content-register #email{
-    width: 40%;
-}
-main .content-register #city{
-    width: 25%;
-}
-main .content-register #country{
-    width: 25%;
-}
-main .content-register #road{
-    width: 40%;
-}
-main .content-register #age{
-    width: 10%;
-}
-main .content-register #type_customers{
-    margin-top: 8px;
-    margin-left: 20px;
-    padding: 12px 15px;
-    font-size: 18px;
-    font-weight: bold;
-    border: black solid 1px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.buttons{
-    display:inline-block;
-}
-
-.display{
-    width: 137px;
-}
-button{
-    margin-top: 20px;
-    margin-left: 500px;
-    border-radius: 5px;
-    padding: 10px;
-    border: black solid 2px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bold;
-    color:rgba(77, 189, 233, 1);
-}
-select{
-    padding:10px;
-    border:black solid 1px;
-    cursor:pointer;
-    border-radius:4px;
-    color:rgba(77,189,233,1);
-}
-a{
-    text-decoration:none;
-    color:rgba(77, 189, 233, 1);
-}
-
-/*Fim section*/
-
-/*Imagem*/
