--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -103,8 +103,8 @@
         </form>
 
         <form th:action="@{/home/busca/nome}" method="post"> <!--Buscar por nome...-->
-            <div class="buscador mt-5 ms-4 ">
-                <input type="text" id="textBusca" name="busca" placeholder="Buscar por nome...:">
+            <div class="mt-5 ms-4 ">
+                <input type="text" id="textBusca" name="busca" placeholder="Buscar por nome...:" onchange="this.form.submit()">
                 <button type="submit"
                         class="btn btn-dark ms-1"
                 >
@@ -112,7 +112,14 @@
                 </button>
             </div>
         </form>
-
+            <form th:action="@{/home/busca/email}" method="post">
+                <div class="mt-3 ms-4">
+                    <input type="text" name="email" id="textBuscaEmail" placeholder="Buscar por email...:" onchange="this.form.submit()">
+                    <button type="submit" class="btn btn-dark ms-1">
+                        BUSCAR
+                    </button>
+                </div>
+            </form>
     </div>
 </section>
 </body>
